2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-03-25  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-i18n.h: Fix comment after #endif to
	denote the right file. Patch from Gustavo R. Montesino 
	<ikki_gerrard at yahoo.com>. Closes bug #133788.

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

==================== 2.6.0 ====================

2004-03-22  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Version 2.6.0 "Zoomer"

	* Makefile.am (EXTRA_DIST): Add NEWS

	* NEWS: Update 

Wed Mar 17 12:34:30 2004  Jonathan Blandford  <jrb@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Add
	file_chooser_backend schema.

2004-03-16  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.92.1

	* libgnome/gnome-init.c: (libgnome_userdir_setup),
	(libgnome_module_info_get):
	Put back the bind_textdomain_codeset, and use g_printerr
	instead of fprintf on stderr. This partially fixes #106549.
	
2004-03-15  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.92

2004-03-09  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.91

2004-03-04  Glynn Foster  <glynn.foster@sun.com>

	* configure.in, libgnome/Makefile.am,
	libgnome/libgnome-2.0-uninstalled.pc.in: Add
	uninstalled pc file.

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added sr@ije to ALL_LINGUAS.

2004-02-24  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.90

2004-02-20  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

2004-02-10  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_lockdown.schemas.in: Fix typo.

2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-05  Mark McLoughlin  <mark@skynet.ie>
